Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@i915_selftest@live@execlists - incomplete - list_add corruption. prev->next should be next.*\n.*WARNING: .* at lib/list_debug.c:\d+ __list_add_valid
<4> [408.701859] list_add corruption. prev->next should be next (ffff8882790f31d0), but was dead000000000100. (prev=ffff888278f0b870).
<4> [408.701876] WARNING: CPU: 7 PID: 0 at lib/list_debug.c:28 __list_add_valid+0x4d/0x70
<4> [408.701879] Modules linked in: i915(+) vgem snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic ledtrig_audio mei_hdcp x86_pkg_temp_thermal coretemp snd_intel_dspcfg crct10dif_pclmul ax88179_178a crc32_pclmul snd_hda_codec usbnet mii snd_hwdep e1000e snd_hda_core ghash_clmulni_intel snd_pcm mei_me ptp pps_core mei intel_lpss_pci prime_numbers [last unloaded: i915]
<4> [408.701902] CPU: 7 PID: 0 Comm: swapper/7 Tainted: G U 5.8.0-rc7-CI-CI_DRM_8829+ #1
<4> [408.701904] Hardware name: Intel Corporation Ice Lake Client Platform/IceLake Y LPDDR4x T4 RVP TLC, BIOS ICLSFWR1.R00.3212.A00.1905212112 05/21/2019
<4> [408.701908] RIP: 0010:__list_add_valid+0x4d/0x70
<4> [408.701911] Code: c3 48 89 d1 48 c7 c7 80 16 33 82 48 89 c2 e8 9a df b6 ff 0f 0b 31 c0 c3 48 89 c1 4c 89 c6 48 c7 c7 d0 16 33 82 e8 83 df b6 ff <0f> 0b 31 c0 c3 48 89 f2 4c 89 c1 48 89 fe 48 c7 c7 20 17 33 82 e8
<4> [408.701914] RSP: 0018:ffffc90000280e18 EFLAGS: 00010086
<4> [408.701917] RAX: 0000000000000000 RBX: ffff8881cfc09e00 RCX: 0000000000000105
<4> [408.701919] RDX: 0000000000000105 RSI: ffffffff82320a7b RDI: 00000000ffffffff
<4> [408.701921] RBP: ffff888278f0b870 R08: 0000000000000000 R09: 0000000000000001
<4> [408.701924] R10: 000000003d287704 R11: 0000000011779ed7 R12: ffff8882790f3188
<4> [408.701926] R13: ffff88827e483880 R14: ffff88827e483848 R15: ffff8882790f31d0
<4> [408.701929] FS: 0000000000000000(0000) GS:ffff88829c180000(0000) knlGS:0000000000000000
<4> [408.701931] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [408.701934] CR2: 0000563ef479ac60 CR3: 0000000005610006 CR4: 0000000000760ee0
<4> [408.701936] PKRU: 55555554
<4> [408.701938] Call Trace:
<4> [408.701941] <IRQ>
<4> [408.702019] i915_request_enable_breadcrumb+0x278/0x400 [i915]
<4> [408.702101] __i915_request_submit+0xca/0x2a0 [i915]
<4> [408.702169] __execlists_submission_tasklet+0x480/0x1830 [i915]
<4> [408.702232] execlists_submission_tasklet+0xc4/0x130 [i915]
<4> [408.702239] tasklet_action_common.isra.17+0x6c/0x1c0
<4> [408.702248] __do_softirq+0xdf/0x498
<4> [408.702256] ? handle_fasteoi_irq+0x150/0x150
<4> [408.702260] asm_call_on_stack+0xf/0x20
<4> [408.702263] </IRQ>
<4> [408.702267] do_softirq_own_stack+0xa1/0xc0
<4> [408.702271] irq_exit_rcu+0xb5/0xc0
<4> [408.702275] common_interrupt+0xf7/0x260
<4> [408.702281] asm_common_interrupt+0x1e/0x40
<4> [408.702286] RIP: 0010:cpuidle_enter_state+0xb6/0x410
<4> [408.702288] Code: 00 31 ff e8 cc 3d 89 ff 80 7c 24 0b 00 74 12 9c 58 f6 c4 02 0f 85 31 03 00 00 31 ff e8 f3 6b 90 ff e8 0e a4 94 ff fb 45 85 ed <0f> 88 c7 02 00 00 49 63 c5 4c 2b 24 24 48 8d 14 40 48 8d 14 90 48
<4> [408.702291] RSP: 0018:ffffc90000143e70 EFLAGS: 00000202
<4> [408.702294] RAX: 0000000000000007 RBX: ffffe8ffffda8070 RCX: 0000000000000000
<4> [408.702296] RDX: 0000000000000000 RSI: ffffffff8238b2f6 RDI: ffffffff8233166f
<4> [408.702298] RBP: ffffffff826b4e00 R08: 0000000000000000 R09: 0000000000000000
<4> [408.702301] R10: 0000000000000001 R11: 0000000000000000 R12: 0000005f2883a284
<4> [408.702303] R13: 0000000000000002 R14: 0000000000000002 R15: 0000000000000002
<4> [408.702320] cpuidle_enter+0x24/0x40
<4> [408.702325] do_idle+0x22f/0x2d0
<4> [408.702333] cpu_startup_entry+0x14/0x20
<4> [408.702337] start_secondary+0x158/0x1a0
<4> [408.702342] secondary_startup_64+0xa4/0xb0
<4> [408.702355] irq event stamp: 9769815
<4> [408.702358] hardirqs last enabled at (9769814): [<ffffffff810b92b0>] tasklet_action_common.isra.17+0x30/0x1c0
<4> [408.702362] hardirqs last disabled at (9769815): [<ffffffff81a5d5dd>] _raw_spin_lock_irqsave+0xd/0x50
<4> [408.702365] softirqs last enabled at (9769808): [<ffffffff810b9a1a>] irq_enter_rcu+0x6a/0x70
<4> [408.702368] softirqs last disabled at (9769809): [<ffffffff81c00f4f>] asm_call_on_stack+0xf/0x20
<4> [408.702370] ---[ end trace 63a2587fcab8df46 ]---